--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Contact Us - Brand</title>
+    <title>Fantasy Insult Generator</title>
+    <meta name="description" content="A simple tool to create random insults for your favorite (or least favorite) fantasy races.">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
@@ -16,24 +17,21 @@
         <section class="clean-block clean-form dark">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info">Fantasy RPG&nbsp;Insult Maker</h2>
-                    <p>There's literally like three buttons on this page, it's not that hard to figure out.</p>
+                    <h2 class="text-info">Fantasy Insult Maker</h2>
+                    <p id="welcome-text"></p>
                 </div>
                 <form>
                     <div class="form-row" style="margin: 10px;">
                         <div class="col">
-                            <div class="dropdown"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button" style="width: 100%;">Dropdown </button>
-                                <div class="dropdown-menu" id="race-menu"></div>
+                            <div class="dropdown"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" id="race-dropdown-button" type="button" style="width: 100%;">Race</button>
+                                <div class="dropdown-menu" id="race-menu" style="max-height: 200px;"><a class="dropdown-item" href="#" onclick="setInsultRace(&#39;Generic Insult&#39;)">Generic Insult</a></div>
                             </div>
                         </div>
-                    </div>
-                    <div class="dropdown">
-                        <div class="dropdown-menu" data-toggle="dropdown" aria-expanded="false"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
                     </div>
                     <div class="form-row">
                         <div class="col-xl-10 offset-xl-0" style="max-width: 80%;"><input class="form-control" type="text" id="insult-text"></div>
                         <div class="col" style="max-width: 10%;"><button class="btn btn-primary" type="button" style="width: 38px;height: 38px;padding: 6px 6px;" onclick="generateInsult()"><img src="assets/img/generate.png" style="width: 100%;"></button></div>
-                        <div class="col" style="max-width: 10%;"><button class="btn btn-primary" type="button" style="width: 38px;height: 38px;padding: 6px 6px;"><img src="assets/img/copy.png" style="min-width: 38;width: 100%;"></button></div>
+                        <div class="col" style="max-width: 10%;"><button class="btn btn-primary" type="button" style="width: 38px;height: 38px;padding: 6px 6px;"><img src="assets/img/copy.png" style="min-width: 38;width: 100%;" onclick="copyInsult()"></button></div>
                     </div>
                     <div></div>
                 </form>
@@ -55,7 +53,7 @@
                     <h5>Contribute</h5>
                     <ul>
                         <li><a href="#"></a></li>
-                        <li><a href="#">Github Repository</a></li>
+                        <li><a href="https://github.com/Felger/insult-maker">Github Repository</a></li>
                     </ul>
                 </div>
             </div>
