--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="A simple tool to create random insults for your favorite (or least favorite) fantasy races.">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
 </head>
@@ -30,8 +31,8 @@
                     </div>
                     <div class="form-row">
                         <div class="col-xl-10 offset-xl-0" style="max-width: 80%;"><input class="form-control" type="text" id="insult-text"></div>
-                        <div class="col" style="max-width: 10%;"><button class="btn btn-primary" type="button" style="width: 38px;height: 38px;padding: 6px 6px;" onclick="generateInsult()"><img src="assets/img/generate.png" style="width: 100%;"></button></div>
-                        <div class="col" style="max-width: 10%;"><button class="btn btn-primary" type="button" style="width: 38px;height: 38px;padding: 6px 6px;"><img src="assets/img/copy.png" style="min-width: 38;width: 100%;" onclick="copyInsult()"></button></div>
+                        <div class="col" style="max-width: 10%;"><button class="btn btn-primary" type="button" style="width: 38px;height: 38px;padding: 6px 6px;" onclick="generateInsult()"><i class="material-icons">shuffle</i></button></div>
+                        <div class="col" style="max-width: 10%;"><button class="btn btn-primary" type="button" style="width: 38px;height: 38px;padding: 6px 6px;"><i class="material-icons">content_copy</i></button></div>
                     </div>
                     <div></div>
                 </form>
