Forgot to add onclick to copy button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="form-row">
                         <div class="col-xl-10 offset-xl-0" style="max-width: 80%;"><input class="form-control" type="text" id="insult-text"></div>
                         <div class="col" style="max-width: 10%;"><button class="btn btn-primary" type="button" style="width: 38px;height: 38px;padding: 6px 6px;" onclick="generateInsult()"><i class="material-icons">shuffle</i></button></div>
-                        <div class="col" style="max-width: 10%;"><button class="btn btn-primary" type="button" style="width: 38px;height: 38px;padding: 6px 6px;"><i class="material-icons">content_copy</i></button></div>
+                        <div class="col" style="max-width: 10%;"><button class="btn btn-primary" type="button" style="width: 38px;height: 38px;padding: 6px 6px;" onclick="copyInsult()"><i class="material-icons">content_copy</i></button></div>
                     </div>
                     <div></div>
                 </form>
