Added some images to spice the place up!

--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
     <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png"/>
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
     <main class="page contact-us-page">
-        <section class="clean-block clean-form dark">
+        <section class="clean-block clean-form dark" style="background: url(&quot;assets/img/tophat-ogre.jpg&quot;) left / auto no-repeat, #d1d1d1;height: 600px;">
             <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info">Fantasy Insult Maker</h2>
-                    <p id="welcome-text"></p>
-                </div>
+                <div class="block-heading"></div>
                 <form>
+                    <h2 class="text-info" style="text-align: center;">Fantasy Insult Maker</h2>
+                    <p id="welcome-text" style="text-align: center;"></p>
                     <div class="form-row" style="margin: 10px;">
                         <div class="col">
                             <div class="dropdown"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" id="race-dropdown-button" type="button" style="width: 100%;">Race</button>
