Change the name of the dropdown
Default is to make a generic insult.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p id="welcome-text" style="text-align: center;"></p>
                     <div class="form-row" style="margin: 10px;">
                         <div class="col">
-                            <div class="dropdown"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" id="race-dropdown-button" type="button" style="width: 100%;">Race</button>
+                            <div class="dropdown"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" id="race-dropdown-button" type="button" style="width: 100%;">Generic Insult</button>
                                 <div class="dropdown-menu" id="race-menu" style="max-height: 200px;"><a class="dropdown-item" href="#" onclick="setInsultRace(&#39;Generic Insult&#39;)">Generic Insult</a></div>
                             </div>
                         </div>
