Add form to submit insults without having to edit Github
Will have to check it periodically.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <ul>
                         <li><a href="#"></a></li>
                         <li><a href="https://github.com/Felger/insult-maker">Github Repository</a></li>
+                        <li><a href="https://forms.gle/YBbq8C9GtMi9FNxw8">Submit Insults via Form</a></li>
                     </ul>
                 </div>
             </div>
