--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class="col-xl-10 offset-xl-0" style="max-width: 80%;"><input class="form-control" type="text" id="insult-text"></div>
+                        <div class="col-xl-10 offset-xl-0" style="max-width: 80%;"><textarea class="form-control" id="insult-text"></textarea></div>
                         <div class="col" style="max-width: 10%;"><button class="btn btn-primary" type="button" style="width: 38px;height: 38px;padding: 6px 6px;" onclick="generateInsult()"><i class="material-icons">shuffle</i></button></div>
                         <div class="col" style="max-width: 10%;"><button class="btn btn-primary" type="button" style="width: 38px;height: 38px;padding: 6px 6px;" onclick="copyInsult()"><i class="material-icons">content_copy</i></button></div>
                     </div>
@@ -73,7 +73,7 @@
     <script src="assets/js/smoothproducts.min.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/insultgen.js"></script>
+    <script src="assets/js/insultgen-1.0.0.js"></script>
 </body>
 
 </html>
