Add invisible imgs to force load

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
         <div class="footer-copyright">
             <p>License - Apache 2.0</p>
         </div>
+        <img src="/assets/img/android-chrome-192x192.png" style="display: none;">
+        <img src="/assets/img/android-chrome-512x512.png" style="display: none;">
+        <img src="/assets/img/apple-touch-icon.png" style="display: none;">
+        <img src="/assets/img/favicon-16x16.png" style="display: none;">
+        <img src="/assets/img/favicon-32x32.png" style="display: none;">
     </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
